cluster/apps/backend/databases/pgadmin/ingressRoute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: route-pgadmin
  namespace: networking
spec:
  entryPoints:
    # - web
    - websecure
  routes:
    - match: Host(`pgadmin.${SECRET_DOMAIN}`)
      kind: Rule
      # Enable auth middleware
      middlewares:
        - name: rfc1918
        # - name: basicauth
      services:
        - name: pgadmin-pgadmin4
          namespace: database
          port: 80
  # Use the secret generated by cert-manager
  tls:
    secretName: "${SECRET_DOMAIN/./-}-tls"
    # secretName: '${SECRET_DOMAIN/./-}-stage-tls'
